# algolabra

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
docs/: Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5  Viikkoraportti5.md  Viikkoraportti6.md  kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: data_handling.py  main.py  network.py  user_interface.py
src/tests/: invariant_network_test.py  network_test.py
