[project]
name = "algolabra"
version = "0.1.0"
description = ""
authors = [
    {name = "vainiovesa",email = "vesa.vainio@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "numpy (==2.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

